--- a/outlook-email-template.html
+++ b/outlook-email-template.html
@@ -32,7 +32,7 @@
                                     <td style="text-align: left; vertical-align: middle;">
                                         <!-- Logo Placeholder -->
                                         <!-- INSERT LOGO HERE -->
-                                        <img src="https://via.placeholder.com/180x40/5F259F/FFFFFF?text=90North" alt="90North Logo" width="180" height="40" style="display: block; border: 0; outline: none; text-decoration: none;" />
+                                        <img src="https://github.com/cmealo/test-email-90/blob/main/90N-web-white-1line.png?raw=true" alt="90North Logo" width="180" height="40" style="display: block; border: 0; outline: none; text-decoration: none;" />
                                     </td>
                                     <td style="text-align: right; vertical-align: middle;">
                                         <p style="margin: 0; font-size: 12px; color: #666666; font-family: Arial, Helvetica, sans-serif;">
